# base-programming-homework-10

Task_1/: CMakeLists.txt  Task_1.cpp
Task_2/: CMakeLists.txt
