cmake_minimum_required(VERSION 3.22.00)
project(Task_2)
add_executable(Task_2 Task_2.cpp figure.h figure.cpp triangle.h triangle.cpp equilateral_triangle.h equilateral_triangle.cpp isosceles_triangle.h isosceles_triangle.cpp right_triangle.h right_triangle.cpp quadrangle.h quadrangle.cpp parallelogram.h parallelogram.cpp rectangle.h rectangle.cpp  rhombus.h rhombus.cpp square.h square.cpp)